--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -4,5 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    overflow: scroll;
+    height: 100%;
+    background-color: #14172B;
+    flex-wrap: wrap;
 }
